# synapse-a2a

./: .coderabbit.yaml  .coverage  .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  .wtp.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  PHASE2_HANDOFF.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  Untitled  cliff.toml  dummy_agent.py  mkdocs.yml  new_features_summary.md  plan.md  pyproject.toml  renovate.json  requirements.txt  skills-lock.json  zundamon_conversation.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.gemini/: gemini.md
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
.synapse/: default.md  delegate.md  file-safety.md  file_safety.db  gemini.md  opencode.md  proactive.md  settings.json  skill_sets.json  task_board.db
docs/: DELEGATION_GUIDE.md  HANDOFF_CLAUDE_ENTER_KEY_ISSUE.md  README.md  TASK_OWNERSHIP_DESIGN.md  a2a-design-rationale.md  a2a-overview.md  a2a-uds-local-transport.md  admin-command-center.md  agent-card-context.md  agent-permission-modes.md  agent-teams-adoption-spec.md  canvas-interactive-cards.md  channel-protocol.md  claude-code-worktree.md  cli-cheatsheet.md  draft-spec.md  external-agent-connectivity.md  file-safety.md  generate_readmes.py  input-routing-spec.md  permission-detection-spec.md  phase15-collection.md  proactive-mode-spec.md  project-philosophy.md  readme-template.md  release.md  shared-memory-spec.md  skills-management.md  spawn-zone-tiling.md  symphony-analysis.md  synapse-reference.md  terminology.md  tornado-adoption-spec.md  transport-display-spec.md  universal-agent-communication-spec.md  worktree.md
examples/: golden-path.md
guides/: README.md  a2a-communication.md  agent-identity.md  architecture.md  delegation.md  enterprise.md  google-a2a-spec.md  multi-agent-patterns.md  multi-agent-setup.md  overview.md  profiles.md  references.md  settings.md  troubleshooting.md  usage.md
homebrew/: synapse-a2a.rb
roles/: documenter.md  golden-phoenix.md  implementer.md  manager.md  tester.md
scoop/: synapse-a2a.json
scripts/: extract_changelog.py  generate_changelog.py  merge_changelog.py  merge_version_line.py  patch_homebrew_formula.py  update_scoop_manifest.py
site-docs/: changelog.md  index.md  troubleshooting.md
synapse/: __init__.py  __main__.py  _pty_sanitize.py  a2a_client.py  a2a_compat.py  a2a_formatting.py  a2a_models.py  adapters.py  agent_context.py  agent_profiles.py  approval.py  approval_gate.py  auth.py  cli.py  compliance.py  config.py  controller.py  controller_status.py  delegation.py  error_detector.py  evolve.py  file_safety.py  grpc_server.py  harness.py  history.py  hooks.py  idle_detector.py  input_router.py  instinct.py  learnings.py  logging_config.py  long_message.py  observation.py  output_parser.py  paths.py  pattern_analyzer.py  port_manager.py  probabilistic_recall.py  pty_renderer.py  registry.py  (+30 more)
tasks/: known-issues.md
tests/: CONVENTIONS.md  __init__.py  canvas_frontend_artifact_test.js  canvas_frontend_live_feed_test.js  canvas_frontend_mermaid_test.js  canvas_frontend_spotlight_test.js  canvas_frontend_system_panel_test.js  canvas_frontend_workflow_crud_test.js  canvas_test_helpers.js  conftest.py  helpers.py  test_a2a_client.py  test_a2a_compat.py  test_a2a_compat_extended.py  test_a2a_compat_long_message.py  test_a2a_compat_sanitize_664.py  test_a2a_helpers_660.py  (+256 more)
(+394 files in other folders)
