[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-a2a"
version = "0.1.0"
description = "Agent-to-Agent communication protocol for CLI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Synapse A2A Team"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
synapse = "synapse.cli:main"
synapse-shell = "synapse.shell:main"
synapse-hook = "synapse.shell_hook:main"

[tool.setuptools.packages.find]
include = ["synapse*"]
