[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-a2a"
version = "0.3.12"
description = "Agent-to-Agent communication protocol for CLI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Synapse A2A Team"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "simple-term-menu>=1.6.6",
    "watchdog>=3.0.0",
    "pyperclip>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "responses>=0.23.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "types-requests>=2.32.4.20250913",
    "types-pyyaml>=6.0.12.20250915",
    "ty>=0.0.1a7",
    "pre-commit>=4.0.0",
    "types-pyperclip>=1.9.0.20250801",
]
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

[project.scripts]
synapse = "synapse.cli:main"
synapse-shell = "synapse.shell:main"
synapse-hook = "synapse.shell_hook:main"

[tool.setuptools.packages.find]
include = ["synapse*"]

[tool.setuptools.package-data]
synapse = ["templates/.synapse/*", "profiles/*.yaml", "profiles/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    "synapse/proto/a2a_pb2.py",
    "synapse/proto/a2a_pb2_grpc.py",
    "synapse/shell_hook.py",  # Contains embedded shell scripts
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]  # Allow nested with statements in tests for readability

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true
exclude = [
    "synapse/proto/a2a_pb2.py",
    "synapse/proto/a2a_pb2_grpc.py",
]

[[tool.mypy.overrides]]
module = "synapse.proto.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*"]
ignore_missing_imports = true

